cloud/yamls/rawYamls/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-gateway-ingress
spec:
  defaultBackend:
    service:
      name: default-http-backend
      port:
        number: 80
  rules:
  - http:
      paths:
      - path: /api/parking
        pathType: Prefix
        backend:
          service:
            name: trabant-app-backend-parking
            port:
              number: 80
      - path: /api/echarging
        pathType: Prefix
        backend:
          service:
            name: backend-echarging
            port:
              number: 80
      - path: /api/reporting
        pathType: Prefix
        backend:
          service:
            name: trabant-app-backend-reporting
            port:
              number: 80
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: trabant-app-backend-service
            port:
              number: 80
              
      - path: /
        pathType: Prefix
        backend:
          service:
            name: trabant-app-frontend
            port:
              number: 80
